@@ -79,19 +79,18 @@ table.gridTable tr td{
 
 .colorpickerLabel{
 	border: 1px solid black;
-	display: inline-block;
+	display: inline;
 	width: 10px;
 	height: 10px;
 }
 
-div.groupingCaption {
-	padding-left: 5px;
-	background-color: #CED7DF;
-}
-div.groupingContent {
-	border: 2px solid #CED7DF;
-	padding-bottom: 2px;
+fieldset {
+	border: 1px solid gray;
 	margin-bottom: 2px;
+	padding: 2px;
+}
+fieldset legend{
+	margin: 0.2em 0.5em;
 }
 
 /************************************************************/
