@@ -126,6 +126,15 @@ table.formtable tr.new td{
 	background-color: #245078;
 }
 
+table.gridTable thead tr td{
+	background-color: #022744;
+}
+table.gridTable tfoot tr td{
+	background-color: #022744;
+}
+table.gridTable tbody tr td{
+	background-color: #022744;
+}
 
 td.form_row_l_simple { /* left cell simple */
 	border-color: #77B7DA;
@@ -181,6 +190,9 @@ table.filter .subfilter_active{
 table.tableinfo{
 	color: #FFFFFF;
 	background-color: #001C31;
+}
+table.tableinfo caption {
+	background: #3C759B url(darkblue/images/ui-bg_inset-soft_25_3c759b_1x100.png) 50% 50% repeat-x;
 }
 
 table.tableinfo tr td {
